# pytest-helpers-namespace

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylint-spelling-words  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  appveyor.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: testing.yml
.pre-commit-hooks/: check-changelog-entries.py  copyright-headers.py  sort-pylint-spelling-words.py
changelog/: 11.improvement.rst  _template.rst
docs/: all.rst  conf.py  contents.rst  index.rst
docs/_static/css/: inline-include.css
docs/ref/: modules.rst  pytest_helpers_namespace.rst
pytest_helpers_namespace/: plugin.py  version.py
requirements/: base.txt  changelog.txt  docs.txt  lint.txt
src/pytest_helpers_namespace/: __init__.py  plugin.py
tests/: conftest.py  test_helpers_namespace.py
